Fix submenu animation on mobile nav. Increase animation speed across every animation

--- a/src/components/Header/Nav/MobileNav/MobileNav.module.css
+++ b/src/components/Header/Nav/MobileNav/MobileNav.module.css
@@ -13,7 +13,7 @@
   padding: 12px 24px 32px;
   box-shadow: 0px 10px 20px 8px rgba(0, 0, 0, 0.25);
   opacity: 0;
-  transition: opacity 0.35s ease-in-out;
+  transition: opacity 0.25s ease-in-out;
 }
 
 .menu-items-list {
