--- a/src/components/Header/Nav/MobileNav/MobileNavItem.module.css
+++ b/src/components/Header/Nav/MobileNav/MobileNavItem.module.css
@@ -15,7 +15,7 @@
 }
 
 .animate {
-  transition: all 0.35s ease-in-out;
+  transition: all 0.25s ease-in-out;
 }
 
 .animate.rotate {
