--- a/src/components/Header/Nav/MobileNav/MobileNavSubMenu.module.css
+++ b/src/components/Header/Nav/MobileNav/MobileNavSubMenu.module.css
@@ -1,30 +1,35 @@
 .submenu {
-    width: 100%;
-    margin: 0.75rem 1.5rem 1rem;
-    background-color: #2d2e4008;
-    border-radius: 5px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
+  width: 100%;
+  margin: 0.75rem 1.5rem 1rem;
+  background-color: #2d2e4008;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  opacity: 0%;
+  transition: opacity 0.25s ease-in-out;
+}
 
-  .submenu__list {
-      font-family: 'Overpass', sans-serif;
-      font-size: 1rem;
-      font-weight: 600;
-      text-align: center;
-      padding: 1.25rem;
-      list-style-type: none;
-      color: #1F3E5A;
+.fadein {
+  opacity: 100%;
+}
 
-  }
+.submenu__list {
+  font-family: "Overpass", sans-serif;
+  font-size: 1rem;
+  font-weight: 600;
+  text-align: center;
+  padding: 1.25rem;
+  list-style-type: none;
+  color: #1f3e5a;
+}
 
-  .submenu__item {
-      cursor: pointer;
-      opacity: 75%;
-  }
+.submenu__item {
+  cursor: pointer;
+  opacity: 75%;
+}
 
-  .submenu__item + .submenu__item {
-      margin-top: 1rem;
-  }
+.submenu__item + .submenu__item {
+  margin-top: 1rem;
+}
